# mr_LAW

./: .gitignore  batch_panda_ik_group_experiment.py
data/: plot_rate_csv.py  plot_semicolon_csv.py
data/20260122_053618_video/: p1.json  p2.json  p3.json  p4.json  robot_info.txt  summary.json  targets.json
data/20260129_235448/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data/batch_csv/: np15_ns300_time_totg.csv  np25_ns100_time_totg.csv  np30_ns50_time_totg.csv  np6_ns100_time_totg.csv  np6_ns150_time_totg.csv  np6_ns200_time_totg.csv  np6_ns250_time_totg.csv  np6_ns300_time_totg.csv  np6_ns500_time_totg.csv  np6_ns50_time_totg.csv  np6_ns700_time_totg.csv  np6_ns900_time_totg.csv
data/batch_runs/20260116_045950/np02_ns050_seed07/20260116_045950/: p1.json  p2.json  summary_enumeration.json  summary_tradition.json  targets.json
data/batch_runs/20260116_045950/np02_ns050_seed08/20260116_045953/: p1.json  p2.json  summary_enumeration.json  summary_tradition.json  targets.json
data/batch_runs/20260116_045950/np02_ns050_seed09/20260116_045955/: p1.json  p2.json  summary_enumeration.json  summary_tradition.json  targets.json
data/batch_runs/20260116_045950/np02_ns050_seed10/20260116_045958/: p1.json  p2.json  targets.json  (+2 more)
data/csv/: 20260116_051315_group_results.csv  20260117_123008_group_results.csv
data/old/: branch_cut.py  panda_ik_solutions1.json  panda_ik_solutions2.json  panda_ik_solutions3.json  panda_ik_solutions4.json  summary.txt
data_three/: plot_summary_cum_time.py  plot_summary_seg_rate.py
data_three/batch_csv_window/: np7_time_trapezoid.csv
data_three/batch_csv_window/totg/: np12_time_totg.csv  np7_time_totg.csv
data_three/old/20260128_183540/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_three/old/20260128_193234/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_three/old/20260128_194849/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_three/old/20260128_201905/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_three/old/20260128_204155/: p1.json  p10.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_three/old/figs/: np10_sd10_ws3_segment_rate.csv  np10_sd11_ws3_segment_rate.csv  np10_sd7_ws3_segment_rate.csv  np10_sd8_ws3_segment_rate.csv  np10_sd9_ws3_segment_rate.csv
data_window/: plot_rate_ws_csv.py  plot_rate_ws_csv_dif.py
data_window/20260128_151326/: p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json  summary.json  targets.json
data_window/batch_csv/: np16_ws3.csv  np16_ws4.csv  np16_ws5.csv  np16_ws6.csv  np16_ws7.csv
script/: batch_ik_benchmark.py  batch_ik_window.py  panda_ik_solutions_markers.py
src/panda_ik_benchmark/: README.md  package.xml  setup.cfg  setup.py
src/panda_ik_benchmark/launch/: ik_benchmark.launch.py
src/panda_ik_benchmark/panda_ik_benchmark/ik/: robust_sampler.py  sampler_space.py
src/panda_ik_benchmark/panda_ik_benchmark/planning/: search.py
src/panda_ik_benchmark/panda_ik_benchmark/scripts/: run_benchmark.py
src/panda_ik_benchmark/panda_ik_benchmark/utils/: reporting.py  robot.py  timestamp.py
src/panda_ik_benchmark_viz/panda_ik_benchmark_viz/: ik_benchmark_compare_player.py
src/panda_ik_global_window/: README.md  package.xml  setup.cfg  setup.py
src/panda_ik_global_window/config/: moveit_cpp_offline.yaml
src/panda_ik_global_window/launch/: ik_benchmark.launch.py
src/panda_ik_global_window/panda_ik_global_window/ik/: sampler_space.py
src/panda_ik_global_window/panda_ik_global_window/planning/: search.py
src/panda_ik_global_window/panda_ik_global_window/scripts/: run_benchmark.py
src/panda_ik_global_window/panda_ik_global_window/utils/: reporting.py  robot.py  targets.py  timestamp.py
src/panda_ik_rviz_viz/: package.xml  setup.cfg  setup.py
src/panda_ik_rviz_viz/launch/: empty_rviz.launch.py
src/panda_ik_rviz_viz/panda_ik_rviz_viz/: benchmark_ik_solutions.py  benchmark_two_stage_planning.py  publish_ik_solutions.py
src/panda_ik_solutions_viz/: README.md  package.xml  setup.cfg  setup.py
src/panda_ik_solutions_viz/config/: moveit_cpp_offline.yaml  p1.json
src/panda_ik_solutions_viz/launch/: visualize_ik_solutions.launch.py
src/panda_ik_solutions_viz/panda_ik_solutions_viz/: display_ik_solutions.py
src/panda_ik_window/: README.md  batch_ik_window.py  package.xml  setup.cfg  setup.py
src/panda_ik_window/launch/: ik_benchmark.launch.py
src/panda_ik_window/panda_ik_window/: types.py
src/panda_ik_window/panda_ik_window/ik/: robust_sampler.py
src/panda_ik_window/panda_ik_window/planning/: search.py  time_metric.py
src/panda_ik_window/panda_ik_window/scripts/: run_benchmark.py
src/panda_ik_window/panda_ik_window/utils/: reporting.py  robot.py  timestamp.py
src/panda_ik_window_viz/: README.md  package.xml  setup.cfg  setup.py
src/panda_ik_window_viz/launch/: ik_window_compare_overlay_tint_control_rviz.launch.py  ik_window_compare_overlay_tint_rviz.launch.py  ik_window_compare_rviz.launch.py
src/panda_ik_window_viz/panda_ik_window_viz/: __init__.py  ik_window_compare_player.py  urdf_mesh_tint_markers.py
src/panda_ik_window_viz/rviz/: ik_window_compare.rviz  ik_window_compare_overlay_tint.rviz  ik_window_compare_overlay_tint_control.rviz
src/panda_ik_window_viz_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/panda_ik_window_viz_rviz_plugins/include/panda_ik_window_viz_rviz_plugins/: ik_window_playback_panel.hpp
src/panda_ik_window_viz_rviz_plugins/src/: ik_window_playback_panel.cpp
src/waypoint_viz/: package.xml  setup.cfg  setup.py
src/waypoint_viz/waypoint_viz/: waypoint_viz_node.py
(+3755 files in other folders)
