<?xml version="1.0"?>
<package format="3">
  <name>panda_ik_window_viz_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz2 panel plugins for controlling panda_ik_window_viz playback.</description>

  <maintainer email="you@example.com">panda_ik_window_viz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
